--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pig game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <script src="function/function-constructor.js" type="text/javascript"></script>
+    <div class="wrapper Clearfix">
+        <div class="player-0-panel active">
+            <div class="player-name" id="name-0">Player-0</div>
+            <div class="player-score" id="score-0">43</div>
+            <div class="player-currnt-box ">
+                <div class="player-current-lebel">current</div>
+                <div class="player-current-score" id="current-0">11</div>
+            </div>
+        </div>
+
+        <div class="wrapperClearfix">
+            <div class="player-0-panel-active">
+                <div class="player-name" id="name-1">Player-2</div>
+                <div class="player-score" id="score-1">43</div>
+                <div class="player-currnt-box ">
+                    <div class="player-current-lebel">current</div>
+                    <div class="player-current-score" id="current-1">0</div>
+                </div>
+            </div>
+        </div>
+        <button class="btn-new"><i class="ion-ion-plus-outline"></i>New Game</button>
+        <button class="btn-roll"><i class="ion-ion-plus-loop"></i>Roll-dice</button>
+        <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
+        <img src="dice-5.JPG" alt="dice-5" class="dice">
+    </div>
+    <script src="demo.js"></script>
 </body>
 
 </html>
