--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper Clearfix">
         <div class="player-0-panel active">
-            <div class="player-name" id="name-0">Player-0</div>
+            <div class="player-name" id="name-0">Player-1</div>
             <div class="player-score" id="score-0">43</div>
             <div class="player-currnt-box ">
                 <div class="player-current-lebel">current</div>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="wrapperClearfix">
-            <div class="player-0-panel-active">
+            <div class="player-1-panel">
                 <div class="player-name" id="name-1">Player-2</div>
                 <div class="player-score" id="score-1">43</div>
                 <div class="player-currnt-box ">
@@ -32,7 +32,7 @@
         <button class="btn-new"><i class="ion-ion-plus-outline"></i>New Game</button>
         <button class="btn-roll"><i class="ion-ion-plus-loop"></i>Roll-dice</button>
         <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
-        <img src="dice-5.JPG" alt="dice-5" class="dice">
+        <img src="dice-5.JPG" alt="dice" class="dice">
     </div>
     <script src="demo.js"></script>
 </body>
