--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             </div>
         </div>
 
-        <button class="btn-new"><i class="ion-ion-plus-outline"></i>New Game</button>
-        <button class="btn-roll"><i class="ion-ion-plus-loop"></i>Roll-dice</button>
-        <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
+        <div class="control"><button class="btn-new"><i class="ion-ion-plus-outline"></i>New Game</button>
+            <button class="btn-roll"><i class="ion-ion-plus-loop"></i>Roll-dice</button>
+            <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
+        </div>
         <img src="dice-5.JPG" alt="dice" class="dice">
     </div>
     <script src="demo.js"></script>
