game is nothing left to do.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <button class="btn-roll"><i class="ion-ion-plus-loop"></i>Roll-dice</button>
             <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
         </div>
-        <img src="dice-5.JPG" alt="dice" class="dice">
+        <input type="text" class="final-score" placeholder="final score">
+        <img src="dice-5.JPG" alt="dice" class="dice" id="dice1">
+        <img src="dice-5.JPG" alt="dice" class="dice" id="dice2">
     </div>
     <script src="demo.js"></script>
 </body>
