image location changed

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <button class="btn-hold"><i class="ion-ion-plus-download-outline"></i>Hold</button>
         </div>
         <input type="text" class="final-score" placeholder="final score">
-        <img src="dice-5.JPG" alt="dice" class="dice" id="dice1">
-        <img src="dice-5.JPG" alt="dice" class="dice" id="dice2">
+        <img src="IMAGES/dice-1.JPG" alt="dice" class="dice" id="dice1">
+        <img src="IMAGES/dice-1.JPG" alt="dice" class="dice" id="dice2">
     </div>
     <script src="demo.js"></script>
 </body>
