--- a/function/function-index.html
+++ b/function/function-index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="primitiveVsObject.js" type="text/javascript"></script>
+    <script src="functionAsArguments.js"></script>
 </body>
+
 
 </html>
