--- a/objects/index-object.html
+++ b/objects/index-object.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="primitiveVsObject.js" type="text/javascript"></script>
+    <script src="function/functionA"></script>
 </body>
 
 </html>
