--- a/function/index-function.html
+++ b/function/index-function.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="functionReturensFunction.js" type="text/javascript"></script>
+    <script src="functionAsArguments.js" type="text/javascript"></script>
 </body>
 
 </html>
