--- a/objects/index-object.html
+++ b/objects/index-object.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="Object-methods-2.js"></script>
+    <script src="Object-function-2.js"></script>
 </body>
 
 </html>
