--- a/as objects/index-object.html
+++ b/as objects/index-object.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <script src="functionAsArguments.js"></script>
+    <script src="primitiveVsObject.js"></script>
 </body>
-
 
 </html>
