--- a/a basics/index.html
+++ b/a basics/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
-    <script src="basics/hello.js"></script>
+    <script src="a script.js"></script>
 </head>
 
 <body>
