--- a/a function/index-function.html
+++ b/a function/index-function.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="ad function-constructor.js" type="text/javascript"></script>
+    <script src="ae functionAsArguments.js" type="text/javascript"></script>
 </body>
 
 </html>
