--- a/arrays/index-array.html
+++ b/arrays/index-array.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="array-methods.js"></script>
+    <script src="expense-tracker.js"></script>
 </head>
 
 <body>
